@@ -26,7 +26,6 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.stream.Collectors;
 
 import static com.airbng.common.response.status.BaseResponseStatus.*;
 
@@ -41,6 +40,7 @@ public class ReservationServiceImpl implements ReservationService {
     private final ReservationMapper reservationMapper;
 
     private final ReservationRepository reservationRepository;
+    private final  ReservationCustomRepository reservationCustomRepository;
     private final ReservationJimTypeRepository reservationJimTypeRepository;
     private final MemberRepository memberRepository;
     private final LockerRepository lockerRepository;
@@ -48,13 +48,10 @@ public class ReservationServiceImpl implements ReservationService {
     private static final Long LIMIT = 10L; // 페이지당 최대 예약 개수
 
     //예약 조회 + 페이징 처리
-
     @Override
-    public ReservationPaging findAllReservationById(Long memberId, String role, Object state, Long nextCursorId, String period) {
+    public ReservationPaging findAllReservationById(Long memberId, MemberRole role, Object state, Long nextCursorId, String period) {
         log.info("Finding reservation by memberId: {}, role: {}, state: {}, nextCursorId: {}, LIMIT:{},  PERIOD: {}",
                 memberId, role, state, nextCursorId, LIMIT, period);
-
-        // 초기 커서 ID 설정
 
 
         List<ReservationState> stateList = null;
@@ -68,21 +65,12 @@ public class ReservationServiceImpl implements ReservationService {
             stateList = Collections.singletonList((ReservationState) state);
         }
 
-        if (nextCursorId == null) {
-            Long maxId = reservationMapper.findMaxReservationIdByMemberId(memberId, role, stateList);
-            nextCursorId = (maxId != null) ? maxId + 1L : -1L;
-        }
-
-        log.info("!!! nextCursorId: {}", nextCursorId);
-
         // isHistoryTab 여부 판단
         boolean isHistoryTab = stateList != null &&
                 (stateList.contains(ReservationState.COMPLETED) || stateList.contains(ReservationState.CANCELLED));
 
-        List<ReservationSearchResponse> reservations = reservationMapper.findAllReservationById(
-                memberId, role, stateList, nextCursorId, LIMIT + 1, period, isHistoryTab //다음 페이지 유무 확인
-        );
-
+        List<ReservationSearchResponse> reservations = reservationCustomRepository.findAllReservationByMemberIdWithCursor(
+                memberId, role, stateList, nextCursorId, LIMIT + 1, period, isHistoryTab);
 
         // 예외 처리: 예약이 없을 경우
         if (reservations == null || reservations.isEmpty()) {
@@ -90,29 +78,21 @@ public class ReservationServiceImpl implements ReservationService {
             if (isHistoryTab) {
                 return ReservationPaging.builder()
                         .reservations(Collections.emptyList())
-                        .nextCursorId(-1L) // 더 이상 페이지가 없음을 나타냄
+                        .nextCursorId(-1L) // 더 이상 페이지가 없음
                         .hasNextPage(false)
                         .period(period)
                         .totalCount(0L)
                         .build();
             }
-            // 일반 예약 조회에서 예약이 없으면 예외 발생
-            throw new ReservationException(NOT_FOUND_RESERVATION);
-        }
-//        if (reservations == null || reservations.isEmpty()) {
+            //예약 조회에서 예약이 없으면 예외 발생
 //            throw new ReservationException(NOT_FOUND_RESERVATION);
-//        }
+        }
 
-        //hasNextPage 값 설정 : 다음 페이지 유무
+        // 페이징 처리
         boolean hasNextPage = reservations.size() > LIMIT;
         List<ReservationSearchResponse> content = reservations.stream()
                 .limit(LIMIT)
-                .collect(Collectors.toList());
-
-        // role을 응답 DTO에 표시
-        for (ReservationSearchResponse dto : content) {
-            dto.setRole(role.toUpperCase()); // KEEPER or DROPPER
-        }
+                .toList();
 
         // 다음 커서 ID 설정
         if (hasNextPage && !content.isEmpty()) {
@@ -121,14 +101,12 @@ public class ReservationServiceImpl implements ReservationService {
             nextCursorId = -1L;  // 더 이상 페이지가 없으면 -1로 설정
         }
 
-        ReservationPaging paging = ReservationPaging.builder()
+        return ReservationPaging.builder()
                 .reservations(content)
                 .nextCursorId(nextCursorId)
                 .hasNextPage(hasNextPage)
                 .period(period)
-                .totalCount(reservationMapper.findReservationByMemberId(memberId, role, stateList))
                 .build();
-        return paging;
     }
 
     private final Cache<Long, ReentrantLock> reservationLocks;
